# gbvmis/docs/swagger.json
@@ -2703,8 +2703,11 @@
                 "status": {
                     "type": "string"
                 },
-                "suspect_id": {
-                    "type": "integer"
+                "suspect_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
                 },
                 "title": {
                     "type": "string"
