# gbvmis/internals/models/suspect.go
@@ -25,25 +25,28 @@ type Suspect struct {
 	UpdatedBy    string    `gorm:"size:50" json:"updated_by"`
 
 	// Relationships
-	Cases   []Case   `gorm:"foreignKey:SuspectID" json:"cases"`
+	Cases   []Case   `gorm:"many2many:case_suspects;" json:"cases"`
 	Arrests []Arrest `gorm:"foreignKey:SuspectID" json:"arrests"`
 }
 
+// <img src="data:image/jpeg;base64,{{ .photo }}" alt="Suspect photo">
+// <img src="data:image/png;base64,{{ .fingerprints }}" alt="Fingerprint">
+
 type Case struct {
 	gorm.Model
-	CaseNumber   string    `gorm:"uniqueIndex" json:"case_number"`
-	Title        string    `json:"title"`
-	Description  string    `gorm:"type:text" json:"description"`
-	Status       string    `json:"status"`
-	DateOpened   time.Time `gorm:"type:date" json:"date_opened"`
-	SuspectID    uint      `json:"suspect_id"`
-	OfficerID    uint      `json:"officer_id"`
-	PolicePostID uint      `json:"police_post_id"`
-
-	Charges    []Charge      `gorm:"foreignKey:CaseID" json:"charges"`
-	Victims    []Victim      `gorm:"many2many:case_victims;" json:"victims"`
-	Officer    PoliceOfficer `gorm:"foreignKey:OfficerID"`
-	PolicePost PolicePost    `gorm:"foreignKey:PolicePostID"`
+	CaseNumber   string        `gorm:"uniqueIndex" json:"case_number"`
+	Title        string        `json:"title"`
+	Description  string        `gorm:"type:text" json:"description"`
+	Status       string        `json:"status"`
+	DateOpened   time.Time     `gorm:"type:date" json:"date_opened"`
+	SuspectID    uint          `json:"suspect_id"`
+	OfficerID    uint          `json:"officer_id"`
+	PolicePostID uint          `json:"police_post_id"`
+	Suspects     []Suspect     `gorm:"many2many:case_suspects;" json:"suspects"`
+	Charges      []Charge      `gorm:"foreignKey:CaseID" json:"charges"`
+	Victims      []Victim      `gorm:"many2many:case_victims;" json:"victims"`
+	Officer      PoliceOfficer `gorm:"foreignKey:OfficerID"`
+	PolicePost   PolicePost    `gorm:"foreignKey:PolicePostID"`
 }
 
 type Arrest struct {
